fix: about align

--- a/styles/about.css
+++ b/styles/about.css
@@ -8,14 +8,15 @@
 
 .about-descrip-row {
   display: flex;
-  align-items: center;
-  justify-content: center;
   text-align: center;
-  gap: 30px;
+  justify-content: center;
+  gap: 50px;
 }
 
 .about-descrip-container {
   display: flex;
-  width: 100ch;
+  text-align: center;
+  justify-content: center;
+  width: 100%;
   text-align: center;
 }
