--- a/styles/header.css
+++ b/styles/header.css
@@ -1,5 +1,4 @@
 .header {
-  width: 100vh;
   padding: 0px 15px;
 }
 
